# DataHub

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: daily-release.yml
docs/: index.html
examples/: use_data_provider.rs
scripts/: create_empty_arrow.rs  extract_latest_date.rs  release.rs
src/: config.rs  errors.rs  lib.rs  main.rs  util.rs
src/data_provider/: mod.rs
src/models/: stock.rs
src/scrapers/: base.rs  mod.rs  sse.rs  szse.rs
src/services/: data_service.rs
